# booq-document-factory

./: .gitignore  README.md  booq_document_factory copy.py  booq_document_factory.py  booq_sharepoint_upload.py  config.toml  data_fields.md  docx.py  payload.json  pdf-fill.py  pyproject.toml  requirements.txt  run_github_action.md
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: document-factory.yaml  document-update.yaml
arch/: readme.md
inputfiles/: Dokumenty do zatrudnienia - lista.xlsx  WORD_template.docx
src/booq_document_factory/: classes.py  functions.py  main.py  sharepoint.py
src/booq_document_factory/temp/: PIT2-fields.csv
src/booq_document_factory/templates/docx/: KW_OSOB.docx  OSW_PRYW_EMAIL.docx  OSW_UB_POD_UOP.docx  OSW_UB_POD_UZL.docx  REZYG_PPK.docx  ZGL_CZ_RODZ_UB_ZDR.docx  ~$W_OSOB.docx
tests/: requests.http
